Style(Navigation.tsx-ID 5): fix avatar appareance on mobile

--- a/frontend/src/component/tree/organism/navigation/style.css
+++ b/frontend/src/component/tree/organism/navigation/style.css
@@ -124,7 +124,7 @@
 
 .navigation_sub_wrapper_2 span,
 .navigation_sub_wrapper_2 div {
-	margin-left: 1.5rem;
+	margin-left: .5rem;
 }
 
 @media screen and (min-width: 900px) {
